chandeliers-lus/tests/compile_fail/ui/causality/redef-var-io.stderr
error: Attempt to redefine Variable `a`, when the context already defines it
 --> tests/compile_fail/ui/causality/redef-var-io.rs:6:9
  |
6 |     let a = true; tel
  |         ^^^^^^^^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-io.rs:5:14
  |
5 |     node foo(a : int) returns (a : bool);
  |              ^
